--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,16 @@
 {
-  "functions": {
-    "api/*.py": {
-      "runtime": "python3.11"
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/*.py",
+      "use": "@vercel/python",
+      "config": { "runtime": "python3.11" }
     }
-  }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/latency.py"
+    }
+  ]
 }
