--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,5 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "api/*.py",
-      "use": "@vercel/python",
-      "config": { "runtime": "python3.11" }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/latency.py"
-    }
-  ]
+  "functions": {
+    "api/*.py": { "runtime": "python3.11" }
+  }
 }
